@@ -1,5 +1,6 @@
 Changelog for js-jquery
 
+    #1, add a file-embed example
 3.2.1
     New version of jQuery
 3.1.1
